# tlsod_authorize

./: .bumpversion.cfg  .pre-commit-config.yaml  Caddyfile  README.md  README.rst  compose.yaml  docker-compose.yml  pyproject.toml
docker/: Dockerfile
src/tlsod_authorize/: cli.py  database.py  logging.yml  webserver.py
tests/: conftest.py  test_webserver.py
